# AI-Roadmap-Generator

./: .replit  design_guidelines.md  models.py  openai_service.py  pyproject.toml  replit.md  routes.py
attached_assets/: Pasted--I-want-to-add-a-scoring-engine-that-evaluates-each-AI-_1765488807690.txt  Pasted-AI-Implementation-Roadmap-Here-s-a-structured-AI-Implem_1765461908904.txt  Pasted-GOLDEN-REPLIT-PROMPT-STABILISATION-MODE-Context-This-ap_1765696862205.txt  Pasted-GOLDEN-REPLIT-PROMPT-STABILISATION-MODE-Context-This-ap_1765697229591.txt  Pasted-GOLDEN-REPLIT-PROMPT-v1-2-1-STATE-RESET-FIX-STRICT-MODE_1765704090787.txt  Pasted-Great-here-is-a-ready-to-copy-perfectly-optimized-Repli_1765477342424.txt  Pasted-I-am-getting-a-Syntax-error-in-text-Mermaid-version-10-_1765563858925.txt  Pasted-I-need-you-to-fix-two-things-in-the-timeline-visualizat_1765483242571.txt  Pasted-I-want-to-add-a-scoring-engine-that-evaluates-each-AI-i_1765479511732.txt  Pasted-I-want-to-update-the-timeline-visualization-section-in-_1765479034647.txt  Pasted-I-want-you-to-enhance-my-Flask-AI-Roadmap-Generator-by-_1765478350472.txt  Pasted-I-want-you-to-enhance-the-Timeline-Visualization-sectio_1765477443686.txt  Pasted-PROMPT-FOR-REPLIT-AI-Add-Risk-Complexity-Dependencies-E_1765482244825.txt  Pasted-REPLIT-PROMPT-Add-KPI-Value-Measurement-Framework-to-AI_1765486572947.txt  Pasted-Refactor-and-optimize-the-entire-timeline-visualization_1765474030949.txt
templates/: base.html  history.html  index.html  pdf_template.html  results.html
