[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "markdown>=3.10",
    "openai>=2.9.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
    "weasyprint>=67.0",
    "werkzeug>=3.1.4",
]
